結果の一部をコミットできるようにした

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ __pycache__/
 /train/train.sh.o*
 /train/myresult.txt
 
-!/model/*/*.json
-!/model/*/*.png
+!/model/**/history.json
+!/model/**/params.json
+!/model/**/result.png
