--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,14 @@ __pycache__/
 /preprocessing/logs3
 /train/train.sh.e*
 /train/train.sh.o*
+/train/train_rnn.sh.e*
+/train/train_rnn.sh.o*
 /train/retrain.sh.e*
 /train/retrain.sh.o*
+/train/retrain_rnn.sh.e*
+/train/retrain_rnn.sh.o*
+/train/test.sh.e*
+/train/test.sh.o*
 /train/myresult.txt
 !/model/**/history.json
 !/model/**/params.json
