--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ __pycache__/
 !/model/**/history.json
 !/model/**/params.json
 !/model/**/result.png
+/automl/projects_simple
+/automl/data
+/automl/*.sh.e*
+/automl/*.sh.o*
