--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 /preprocessing/logs1
 /preprocessing/logs2
 /preprocessing/logs3
+/preprocessing/logs_dfdc
 /train/train.sh.e*
 /train/train.sh.o*
 /train/train_rnn.sh.e*
